         * fall back to default if we can't get bucket location (#1170)
       * removed support for _$folder$ keys
       * recurse "subdirectories" even if uri lacks trailing / (#1183)
     * removed iam_job_flow_role option (use iam_instance_profile)
     * custom hadoop_streaming_jar gets properly uploaded
     * 4.x AMIs are supported (#1105)
       * added --release-label switch (--ami-version 4.0.0 also works)
     * don't try to clean up job when there's no cluster ID (#1170)
   * Hadoop
     * counters are parsed from Hadoop binary stderr in YARN (#1153)
     * can find logs and probable cause of failure in YARN (#1195)
       * will search in <output dir>/_logs, to support Cloudera (#565)
     * added hadoop_log_dirs option
     * hdfs_scratch_dir option is now hadoop_tmp_dir (#318)
     * use fs -ls -R and fs -rm -R in YARN (#1152)
     * fs.du() now works on YARN (#1155)
     * fs.du() now returns 0 for nonexistent files instead of erroring
     * fs.rm() now uses -skipTrash
   * Inline/Local
     * runner.fs raises IOError if passed URIs (#1185)
 * removed mrjob.compat.get_jobconf_value() (use jobconf_from_env())
 * removed mrjob.conf.combine_cmd_lists()
 * removed fetch-logs tool (#1127)
 * Python-version-specific mrjob commands (#1104)
 * use followlinks=True with os.walk()
 * mrjob.util:
   * file_ext() takes filename, not path
   * random_identifier() moved here from mrjob.aws
   * renamed buffer_iterator_to_line_iterator() to to_lines()
     * to_lines() no longer appends a newline to data (#819)
   * removed extract_dir_for_tar()
   * gunzip_stream() now yields chunks, not lines
   * removed hash_object()

v0.4.6, 2015-11-09 -- config files
 * PyYAML>=3.08 is required
 * !clear tag in conf files (#1162)
 * combine_lists() and combine_path_lists() can handle scalars (#1172)
 * include: paths in conf files are relative to real path of conf file (#1166)
 * mrjob.conf.combine_cmd_lists() is deprecated (#1168)